--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-navigation": "^4.4.4",
-    "expo-barcode-scanner": "~12.3.2"
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-file-system": "~15.2.2",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
